--- a/community/perl-text-template/APKBUILD
+++ b/community/perl-text-template/APKBUILD
@@ -1,10 +1,10 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=perl-text-template
-pkgver=1.51
+pkgver=1.53
 pkgrel=0
 pkgdesc="Text::Template perl module"
-url="http://search.cpan.org/dist/Text-Template"
+url="https://search.cpan.org/dist/Text-Template"
 arch="noarch"
 license="GPL-1.0-or-later Artistic-1.0-Perl"
 depends="perl"
@@ -12,7 +12,7 @@ makedepends="perl-dev"
 checkdepends="perl-test-warnings"
 install=""
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/M/MS/MSCHOUT/Text-Template-$pkgver.tar.gz"
+source="https://search.cpan.org/CPAN/authors/id/M/MS/MSCHOUT/Text-Template-$pkgver.tar.gz"
 
 builddir="$srcdir/Text-Template-$pkgver"
 build() {
@@ -31,4 +31,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="038a810746684b26cd6a763cfb8adff57a2ed8dc57e44b170b6ba6c8271d513289546294439cfe1c8b77f40153751596a023079ee79bfc6b59fa9393cfcc04f4  Text-Template-1.51.tar.gz"
+sha512sums="136860f16f5100b7a672ae798be1e8d2bd1d6091e63248e9dca3bea42566e8289809d863576c7dcd734865eadb79f8d8f6443457cd14012f486ef14c98732228  Text-Template-1.53.tar.gz"
